<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dip"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:gravity="center"
            android:text="@string/que_souhaitez_vous_vendre"
            android:textColor="@color/blue"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dip"
            android:padding="10dip" >

            <Button
                android:id="@+id/vendre_bateaux"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_sold"
                android:textColor="@drawable/button_sold"
                android:text="@string/bateaux"
                android:textSize="16sp" >
            </Button>

            <Button
                android:id="@+id/vendre_moteurs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_sold"
                android:textColor="@drawable/button_sold"
                android:text="@string/moteurs"
                android:textSize="16sp" >
            </Button>

            <Button
                android:id="@+id/vendre_divers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_sold"
                android:textColor="@drawable/button_sold"
                android:text="@string/divers"
                android:textSize="16sp" >
            </Button>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical" >

            <LinearLayout style="@style/formulaire_separator" >

                <TextView
                    style="@style/formulaire_separator_titre"
                    android:text="@string/generalites" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/vendre_type"
                style="@style/formulaire_cellule" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/type_star" />

                <TextView
                    android:id="@+id/vendre_type_text"
                    style="@style/formulaire_cellule_texte"
                    android:text="@string/type" />

                <ImageView style="@style/formulaire_cellule_indicator" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/vendre_categorie"
                style="@style/formulaire_cellule" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/categorie_star" />

                <TextView
                    android:id="@+id/vendre_categorie_text"
                    style="@style/formulaire_cellule_texte"
                    android:text="@string/categorie" />

                <ImageView style="@style/formulaire_cellule_indicator" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/vendre_chantier_modele"
                style="@style/formulaire_cellule" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/chantier_modele" />

                <TextView
                    android:id="@+id/vendre_chantier_modele_text"
                    style="@style/formulaire_cellule_texte"
                    android:text="@string/chantier_modele" />

                <ImageView style="@style/formulaire_cellule_indicator" />
            </RelativeLayout>

            <LinearLayout style="@style/formulaire_separator" >

                <TextView
                    style="@style/formulaire_separator_titre"
                    android:text="@string/caracteristiques" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/vendre_annee"
                style="@style/formulaire_cellule" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/annee" />

                <TextView
                    android:id="@+id/vendre_annee_text"
                    style="@style/formulaire_cellule_texte"
                    android:text="@string/annee" />

                <ImageView style="@style/formulaire_cellule_indicator" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/vendre_longueur"
                style="@style/formulaire_cellule" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/longueur" />

                <TextView
                    android:id="@+id/vendre_longueur_text"
                    style="@style/formulaire_cellule_texte"
                    android:text="@string/longueur" />

                <ImageView style="@style/formulaire_cellule_indicator" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/vendre_prix"
                style="@style/formulaire_cellule" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/prix" />

                <TextView
                    android:id="@+id/vendre_prix_text"
                    style="@style/formulaire_cellule_texte"
                    android:text="@string/prix" />

                <ImageView style="@style/formulaire_cellule_indicator" />
            </RelativeLayout>

            <LinearLayout style="@style/formulaire_separator" >

                <TextView
                    style="@style/formulaire_separator_titre"
                    android:text="@string/motorisation" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/vendre_nombre_moteur"
                style="@style/formulaire_cellule" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/nombre_moteur" />

                <TextView
                    android:id="@+id/vendre_nombre_moteur_text"
                    style="@style/formulaire_cellule_texte"
                    android:text="@string/nombre_moteur" />

                <ImageView style="@style/formulaire_cellule_indicator" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/vendre_puissance"
                style="@style/formulaire_cellule" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/puissance_ch" />

                <TextView
                    android:id="@+id/vendre_puissance_text"
                    style="@style/formulaire_cellule_texte"
                    android:text="@string/puissance_ch" />

                <ImageView style="@style/formulaire_cellule_indicator" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/vendre_marque_du_moteur"
                style="@style/formulaire_cellule" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/marque_du_moteur" />

                <TextView
                    android:id="@+id/vendre_marque_du_moteur_text"
                    style="@style/formulaire_cellule_texte"
                    android:text="@string/marque_du_moteur" />

                <ImageView style="@style/formulaire_cellule_indicator" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/vendre_annee_du_moteur"
                style="@style/formulaire_cellule" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/annee_du_moteur" />

                <TextView
                    android:id="@+id/vendre_annee_du_moteur_text"
                    style="@style/formulaire_cellule_texte"
                    android:text="@string/annee_du_moteur" />

                <ImageView style="@style/formulaire_cellule_indicator" />
            </RelativeLayout>

            <LinearLayout style="@style/formulaire_separator" >

                <TextView
                    style="@style/formulaire_separator_titre"
                    android:text="@string/photo_and_description" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/vendre_description"
                style="@style/formulaire_cellule" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/description" />

                <TextView
                    android:id="@+id/vendre_description_text"
                    style="@style/formulaire_cellule_texte"
                    android:text="@string/description" />

                <ImageView style="@style/formulaire_cellule_indicator" />
            </RelativeLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dip"
                android:background="#006ab3"
                android:padding="5dip"
                android:text="@string/ajouter_une_photo"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                style="@style/bouton_rechercher"
                android:layout_height="match_parent"
                android:text="@string/etape_suivante" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
