<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/header_retour_effacer" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dip"
            android:layout_marginTop="5dip"
            android:text="@string/boat_on_demand"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginTop="5dip"
            android:gravity="center"
            android:text="@string/description_boat_on_demand"
            android:textColor="@android:color/black" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout style="@style/formulaire_separator" >

                    <TextView
                        style="@style/formulaire_separator_titre"
                        android:text="@string/generalites" />
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/boat_on_demand_type"
                    style="@style/formulaire_cellule" >

                    <TextView
                        style="@style/formulaire_cellule_titre"
                        android:text="@string/type_star" />

                    <TextView
                        android:id="@+id/boat_on_demand_type_text"
                        style="@style/formulaire_cellule_texte"
                        android:text="@string/type" />

                    <ImageView style="@style/formulaire_cellule_indicator" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/boat_on_demand_categorie"
                    style="@style/formulaire_cellule" >

                    <TextView
                        style="@style/formulaire_cellule_titre"
                        android:text="@string/categorie_star" />

                    <TextView
                        android:id="@+id/boat_on_demand_categorie_text"
                        style="@style/formulaire_cellule_texte"
                        android:text="@string/categorie" />

                    <ImageView style="@style/formulaire_cellule_indicator" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/boat_on_demand_chantier_modele"
                    style="@style/formulaire_cellule" >

                    <TextView
                        style="@style/formulaire_cellule_titre"
                        android:text="@string/chantier_modele" />

                    <TextView
                        android:id="@+id/boat_on_demand_chantier_modele_text"
                        style="@style/formulaire_cellule_texte"
                        android:text="@string/chantier_modele" />

                    <ImageView style="@style/formulaire_cellule_indicator" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/boat_on_demand_etat"
                    style="@style/formulaire_cellule" >

                    <TextView
                        style="@style/formulaire_cellule_titre"
                        android:text="@string/etat" />

                    <TextView
                        android:id="@+id/boat_on_demand_etat_text"
                        style="@style/formulaire_cellule_texte"
                        android:text="@string/etat" />

                    <ImageView style="@style/formulaire_cellule_indicator" />
                </RelativeLayout>

                <LinearLayout style="@style/formulaire_separator" >

                    <TextView
                        style="@style/formulaire_separator_titre"
                        android:text="@string/caracteristiques" />
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/boat_on_demand_taille"
                    style="@style/formulaire_cellule" >

                    <TextView
                        style="@style/formulaire_cellule_titre"
                        android:text="@string/taille" />

                    <TextView
                        android:id="@+id/boat_on_demand_taille_text"
                        style="@style/formulaire_cellule_texte"
                        android:text="@string/taille" />

                    <ImageView style="@style/formulaire_cellule_indicator" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/boat_on_demand_lieu"
                    style="@style/formulaire_cellule" >

                    <TextView
                        style="@style/formulaire_cellule_titre"
                        android:text="@string/lieu" />

                    <TextView
                        android:id="@+id/boat_on_demand_lieu_text"
                        style="@style/formulaire_cellule_texte"
                        android:text="@string/lieu" />

                    <ImageView style="@style/formulaire_cellule_indicator" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/boat_on_demand_budget"
                    style="@style/formulaire_cellule" >

                    <TextView
                        style="@style/formulaire_cellule_titre"
                        android:text="@string/budget_star" />

                    <TextView
                        android:id="@+id/boat_on_demand_budget_text"
                        style="@style/formulaire_cellule_texte"
                        android:text="@string/budget" />

                    <ImageView style="@style/formulaire_cellule_indicator" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/boat_on_demand_commentaire"
                    style="@style/formulaire_cellule" >

                    <TextView
                        style="@style/formulaire_cellule_titre"
                        android:text="@string/commentaire" />

                    <TextView
                        android:id="@+id/boat_on_demand_commentaire_text"
                        style="@style/formulaire_cellule_texte"
                        android:text="@string/commentaire" />

                    <ImageView style="@style/formulaire_cellule_indicator" />
                </RelativeLayout>

                <LinearLayout style="@style/formulaire_separator" >

                    <TextView
                        style="@style/formulaire_separator_titre"
                        android:text="@string/reprise_de_votre_bateau" />
                </LinearLayout>

                <LinearLayout style="@style/formulaire_separator" >

                    <TextView
                        style="@style/formulaire_separator_titre"
                        android:text="@string/decrivez_le_bateau_que_vous_possedez" />
                </LinearLayout>

                <Button style="@style/bouton_rechercher" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>